<resources>
    <string name="app_name">Gym</string>
    <string name="retry">Retry</string>
    <string name="gym_error">An error occurred while loading the gyms</string>
    <string name="checkin_error">An error occurred attemping check-in</string>
    <string name="title_gym">Nome da Academia</string>
    <string name="title_address">Endereço da Academia</string>
    <string name="button_activity">Ver atividades</string>
    <string name="button_map">Ver mapa</string>
    <string name="button_checkin">Check-in</string>
    <string name="title_tipo">Atividade</string>
    <string name="unknown_error">unknown_error</string>
    <string name="loading">Carregando...</string>
    <string name="title_activity_page">Atividades da Academia</string>
    <string name="rating">5.00</string>
    <string name="image_rating">Rating</string>
    <string name="google_maps_key" translatable="false">AIzaSyDOYugTRYYerlnsFtSEDV5vWJ_MWTTMmkI</string>
    <string name="title_activity_maps">Localização da Academia</string>
    <string name="title_activity_detail">Modalidades da Academia</string>
    <string name="title_activity_checkin">Check-In Modalidade</string>
    <string name="sem_permissao_acesso_mapa">Acesso ao mapa negado!</string>
</resources>
