<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
                name="viewModel"
                type="br.com.rafaeldias.gym.ui.GymViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

        <TextView
                android:text="@string/title_gym"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:mutableText="@{viewModel.getGymTitle()}"
                android:id="@+id/tvListaGymTitle"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:textSize="@dimen/title_font_size"
                android:textColor="@color/colorTextIcons"
                android:textStyle="bold"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
                android:text="@string/title_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tvListaGymAddress"
                app:mutableText="@{viewModel.getGymAddress()}"
                app:layout_constraintTop_toBottomOf="@+id/tvListaGymTitle"
                android:textSize="@dimen/subtitle_font_size"
                android:textColor="@color/colorLightPrimary"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:text="@string/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvListaGymRating"
                android:textStyle="bold"
                app:mutableText="@{viewModel.getGymRating()}"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/rating_font_size"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tvListaGymAddress"
                app:layout_constraintStart_toEndOf="@+id/imageView"/>

        <Button
                android:text="@string/button_activity"
                android:layout_width="140dp"
                android:layout_height="30dp"
                android:id="@+id/btListaGymActivity"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/colorTextIcons"
                android:textSize="@dimen/button_font_size"
                android:layout_marginTop="18dp"
                app:layout_constraintTop_toBottomOf="@+id/tvListaGymAddress" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:id="@+id/vLinha"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:background="@color/colorSecondaryText"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/btListaGymActivity"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@android:drawable/btn_star_big_on"
                android:id="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/tvListaGymAddress"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginTop="16dp" android:contentDescription="@string/rating"/>
        <Button
                android:text="@string/button_map"
                android:layout_width="140dp"
                android:layout_height="30dp"
                android:id="@+id/btListaGymMap"
                android:background="@color/colorSecondaryText" android:textSize="@dimen/button_font_size"
                android:textColor="@color/colorTextIcons" android:layout_marginTop="18dp"
                app:layout_constraintTop_toBottomOf="@+id/tvListaGymAddress"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/btListaGymActivity"/>

    </android.support.constraint.ConstraintLayout>

</layout>